# ch-vmm

./: Dockerfile  LICENSE  MODULE.bazel  Makefile  PROJECT  README.md  go.mod  go.sum  skaffold.yaml
.github/workflows/: build.yml  release.yml
cmd/ch-vmm-controller/: BUILD.bazel  main.go
cmd/ch-vmm-daemon/: BUILD.bazel  main.go
cmd/ch-vmm-prerunner/: BUILD.bazel  dnsmasq.conf  main.go
cmd/cloud-hypervisor-client-gen/: BUILD.bazel  client.go.mustache  main.go
config/: kustomization.yaml
config/ch-vmm-controller/certmanager/: certificate.yaml  namespace.yaml
config/ch-vmm-controller/default/: kustomization.yaml  manager_webhook_patch.yaml  metrics_service.yaml  webhookcainjection_patch.yaml
config/ch-vmm-controller/manager/: manager.yaml
config/ch-vmm-controller/network-policy/: allow-metrics-traffic.yaml  allow-webhook-traffic.yaml
config/ch-vmm-controller/prometheus/: monitor.yaml
config/ch-vmm-controller/rbac/: leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml  virtualmachine_editor_role.yaml  virtualmachine_viewer_role.yaml  virtualmachinemigration_editor_role.yaml  virtualmachinemigration_viewer_role.yaml
config/ch-vmm-controller/samples/: kustomization.yaml  v1alpha1_virtualmachine.yaml  v1alpha1_virtualmachinemigration.yaml
config/ch-vmm-controller/webhook/: manifests.yaml  namespace.yaml  service.yaml
config/ch-vmm-daemon/: cert-issuer.yaml  cert.yaml  configmap.yaml  daemonset.yaml  kustomization.yaml  role.yaml  rolebinding.yaml  sa.yaml  service.yaml
config/crd/: kustomization.yaml
config/crd/bases/: cloudhypervisor.quill.today_virtualdisks.yaml  cloudhypervisor.quill.today_virtualdisksnapshots.yaml  cloudhypervisor.quill.today_virtualmachinemigrations.yaml  cloudhypervisor.quill.today_virtualmachines.yaml  cloudhypervisor.quill.today_vmpools.yaml  cloudhypervisor.quill.today_vmrestorespecs.yaml  cloudhypervisor.quill.today_vmrollbacks.yaml  cloudhypervisor.quill.today_vmsets.yaml  cloudhypervisor.quill.today_vmsnapshots.yaml
config/crd/patches/: cainjection_in_virtualmachinemigrations.yaml  cainjection_in_virtualmachines.yaml  webhook_in_virtualmachinemigrations.yaml  webhook_in_virtualmachines.yaml
config/rbac/: role.yaml  vmpool_admin_role.yaml  vmpool_editor_role.yaml  vmpool_viewer_role.yaml  vmrestorespec_admin_role.yaml  vmrestorespec_editor_role.yaml  vmrestorespec_viewer_role.yaml  vmrollback_admin_role.yaml  vmrollback_editor_role.yaml  vmrollback_viewer_role.yaml  vmset_admin_role.yaml  vmset_editor_role.yaml  vmset_viewer_role.yaml  vmsnapshot_editor_role.yaml  vmsnapshot_viewer_role.yaml
config/samples/: kustomization.yaml  v1alpha1_vmpool.yaml  v1alpha1_vmreplicaset.yaml  v1alpha1_vmrollback.yaml  v1alpha1_vmset.yaml  v1alpha1_vmsnapshot.yaml
docs/: dedicated_cpu_placement.md  direct_kernel_boot.md  disks_and_volumes.md  interfaces_and_networks.md  vhost-user-net.md  vm_vertical_scaling.md  vmpool.md  vmset.md
examples/: dv_ch_ubuntu_jammy.yaml  dv_ch_ubuntu_k8s_jammy.yaml  dv_ch_ubuntu_noble.yaml  empty-volume.yaml  jammy-ch-rollback.yaml  jammy-ch.yaml  jammy-disk.yaml  jammy-k8s-ch.yaml  noble-ch.yaml  noble-pool.yaml  noble-set.yaml  sc.yaml  snapshot-ch.yaml  snapshot-fc.yaml  upload-dv.yaml  upload-token.yaml  vsc.yaml
internal/controller/: BUILD.bazel  errors.go  migration_controller.go  suite_test.go  virtualdisk_controller.go  virtualdisk_controller_test.go  virtualdisksnapshot_controller.go  virtualdisksnapshot_controller_test.go  virtualmachine_controller.go  virtualmachine_controller_test.go  vmpool_controller.go  vmpool_controller_test.go  vmrollback_controller.go  vmrollback_controller_test.go  vmset_controller.go  vmset_controller_test.go  vmsnapshot_controller.go  vmsnapshot_controller_test.go
pkg/cli/: BUILD.bazel  opts.go  vmm.go
pkg/cloudhypervisor/: BUILD.bazel  client.go
pkg/cloudutils/: BUILD.bazel  gcs.go  s3.go
pkg/config/: BUILD.bazel  config.go
pkg/cpuset/: BUILD.bazel  cpuset_test.go
pkg/daemon/: BUILD.bazel  server.go  snapshot_controller.go  vm_controller.go
pkg/daemon/cgroup/: BUILD.bazel  manager.go  v2_manager.go
pkg/daemon/deviceplugin/: BUILD.bazel  deviceplugin.go
pkg/daemon/mock/: BUILD.bazel  relay_provider.go
pkg/daemon/pid/: BUILD.bazel
pkg/daemon/proto/: BUILD.bazel  daemon.pb.go  daemon.proto
pkg/daemon/tcpproxy/: BUILD.bazel  relay_provider.go
pkg/grpcutil/: BUILD.bazel  client.go  interceptors.go  server.go  tls.go
pkg/tlsutil/: BUILD.bazel
pkg/util/alert/: BUILD.bazel  alert.go
pkg/util/boundedstack/: BUILD.bazel  boundedstack.go
pkg/util/lockmap/: BUILD.bazel
pkg/util/log/: BUILD.bazel  file.go  file_hook.go  k8s.go  log.go
pkg/util/lru/: BUILD.bazel  hash.go  lru.go
pkg/util/metrics/: BUILD.bazel
pkg/volumeutil/: BUILD.bazel  volumeutil.go  zstdpool.go
pkg/webhooks/: virtualdisk_webhook.go  virtualdisk_webhook_test.go  virtualdisksnapshot_webhook.go  virtualdisksnapshot_webhook_test.go  virtualmachine_webhook.go  virtualmachine_webhook_test.go  virtualmachinemigration_webhook.go  virtualmachinemigration_webhook_test.go  vmpool_webhook.go  vmset_webhook.go  vmset_webhook_test.go  webhook_suite_test.go
test/e2e/: e2e_suite_test.go  e2e_test.go
test/utils/: BUILD.bazel
