###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "ch-vmm",
    version = "1.0.0",
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "2.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.10.0")
bazel_dep(name = "protobuf", version = "29.2", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_distroless", version = "0.4.2")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    image = "gcr.io/distroless/base",
    platforms = ["linux/amd64"],
    # 'latest' is not reproducible, but it's convenient.
    # During the build we print a WARNING message that includes recommended 'digest' and 'platforms'
    # values which you can use here in place of 'tag' to pin for reproducibility.
    digest = "sha256:e9d0321de8927f69ce20e39bfc061343cce395996dfc1f0db6540e5145bc63a5",
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64")


zstd = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
zstd.zstd()
use_repo(zstd, "zstd_toolchains")


bazel_lib = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib.jq()
bazel_lib.tar()
use_repo(bazel_lib, "bsd_tar_toolchains", "jq_toolchains")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.3")

go_sdk_dev = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk_dev.download(version = "1.22.3")

# Alternately, download an SDK for a fixed OS/architecture.

# Known to exist since it is instantiated by rules_go itself.
use_repo(
    go_sdk_dev,
    go_sdk = "go_default_sdk",
)

# Known to exist since it is instantiated by rules_go itself.
use_repo(
    go_sdk,
    "go_host_compatible_sdk_label",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_default_attributes(
    build_file_generation = "clean",
    directives = [
        "gazelle:proto disable",
    ],
)
use_repo(
    go_deps,
    "af_inet_tcpproxy",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_feature_s3_manager",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_docker_libnetwork",
    "com_github_firecracker_microvm_firecracker_go_sdk",
    "com_github_golang_mock",
    "com_github_grpc_ecosystem_go_grpc_middleware",
    "com_github_grpc_ecosystem_go_grpc_middleware_providers_prometheus",
    "com_github_grpc_ecosystem_go_grpc_middleware_v2",
    "com_github_hoisie_mustache",
    "com_github_iancoleman_strcase",
    "com_github_intel_userspace_cni_network_plugin",
    "com_github_k8snetworkplumbingwg_network_attachment_definition_client",
    "com_github_klauspost_compress",
    "com_github_mdlayher_vsock",
    "com_github_moby_sys_mountinfo",
    "com_github_mostynb_zstdpool_syncpool",
    "com_github_namsral_flag",
    "com_github_nasa9084_go_openapi",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
    "com_github_opencontainers_runc",
    "com_github_prometheus_client_golang",
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "com_github_subgraph_libmacouflage",
    "com_github_vishvananda_netlink",
    "com_google_cloud_go_storage",
    "in_gopkg_fsnotify_v1",
    "io_k8s_api",
    "io_k8s_apimachinery",
    "io_k8s_apiserver",
    "io_k8s_client_go",
    "io_k8s_kubelet",
    "io_k8s_sigs_controller_runtime",
    "io_kubevirt_containerized_data_importer_api",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_stdout_stdouttrace",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_sys",
)

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.7.0", dev_dependency = True, repo_name = "io_bazel_stardoc")

############################################################
# Define your own dependencies here using go_repository.
# Else, dependencies declared by rules_go/gazelle will be used.
# The first declaration of an external repository "wins".
############################################################

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

http_jar(
    name = "bazel_diff",
    sha256 = "0b9e32f9c20e570846b083743fe967ae54d13e2a1f7364983e0a7792979442be",
    urls = [
        "https://github.com/Tinder/bazel-diff/releases/download/7.0.0/bazel-diff_deploy.jar",
    ],
)
