load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "virt-controller_lib",
    srcs = ["main.go"],
    importpath = "github.com/nalajala4naresh/ch-vmm/cmd/virt-controller",
    visibility = ["//visibility:private"],
    deps = [
        "//api/v1beta1",
        "//internal/controller",
        "@com_github_k8snetworkplumbingwg_network_attachment_definition_client//pkg/apis/k8s.cni.cncf.io/v1:k8s_cni_cncf_io",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/util/runtime",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//plugin/pkg/client/auth",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/healthz",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/filters",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/server",
        "@io_k8s_sigs_controller_runtime//pkg/webhook",
        "@io_kubevirt_containerized_data_importer_api//pkg/apis/core/v1beta1",
    ],
)

go_binary(
    name = "virt-controller",
    embed = [":virt-controller_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":virt-controller"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/virt-controller"],
    env = {
        "PRERUNNER_FC_IMAGE": "$(PRERUNNER_FC_IMAGE)",
        "PRERUNNER_CH_IMAGE": "$(PRERUNNER_CH_IMAGE)",
    },
    tars = [":tar"],
)

oci_load(
    name = "image_load",
    # Use the image built for the exec platform rather than the target platform
    image = ":image",
    repo_tags = ["nalajalanaresh/virt-controller:latest"],
)

filegroup(
    name = "image.tar",
    srcs = [":image_load"],
    output_group = "tarball",
)
