load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "virt-daemon_lib",
    srcs = ["main.go"],
    importpath = "github.com/nalajala4naresh/ch-vmm/cmd/virt-daemon",
    visibility = ["//visibility:private"],
    deps = [
        "//api/v1beta1",
        "//pkg/config",
        "//pkg/daemon",
        "//pkg/daemon/deviceplugin",
        "//pkg/daemon/proto",
        "//pkg/daemon/tcpproxy",
        "//pkg/grpcutil",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/util/runtime",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/healthz",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/server",
    ],
)

go_binary(
    name = "virt-daemon",
    embed = [":virt-daemon_lib"],
    visibility = ["//visibility:public"],
)

#keep
pkg_tar(
    name = "tar",
    srcs = [":virt-daemon"],
)

#keep
oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/virt-daemon"],
    env = {
        "PRERUNNER_FC_IMAGE": "$(PRERUNNER_FC_IMAGE)",
        "PRERUNNER_CH_IMAGE": "$(PRERUNNER_CH_IMAGE)",
    },
    tars = [":tar"],
)

oci_load(
    name = "image_load",
    # Use the image built for the exec platform rather than the target platform
    image = ":image",
    repo_tags = ["nalajalanaresh/virt-daemon:latest"],
)

filegroup(
    name = "image.tar",
    srcs = [":image_load"],
    output_group = "tarball",
)
