load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "virt-prerunner_lib",
    srcs = ["main.go"],
    embedsrcs = ["dnsmasq.conf"],
    importpath = "github.com/nalajala4naresh/ch-vmm/cmd/virt-prerunner",
    visibility = ["//visibility:private"],
    deps = [
        "//api/v1beta1",
        "//pkg/cloudhypervisor",
        "//pkg/cpuset",
        "@com_github_docker_libnetwork//resolvconf",
        "@com_github_docker_libnetwork//types",
        "@com_github_firecracker_microvm_firecracker_go_sdk//:firecracker-go-sdk",
        "@com_github_firecracker_microvm_firecracker_go_sdk//client/models",
        "@com_github_intel_userspace_cni_network_plugin//pkg/types",
        "@com_github_k8snetworkplumbingwg_network_attachment_definition_client//pkg/apis/k8s.cni.cncf.io/v1:k8s_cni_cncf_io",
        "@com_github_namsral_flag//:flag",
        "@com_github_subgraph_libmacouflage//:libmacouflage",
        "@com_github_vishvananda_netlink//:netlink",
    ],
)

go_binary(
    name = "virt-prerunner",
    embed = [":virt-prerunner_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "tar",
    srcs = [":virt-prerunner"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/virt-prerunner"],
    tars = [":tar"],
)

oci_load(
    name = "image_load",
    # Use the image built for the exec platform rather than the target platform
    image = ":image",
    repo_tags = ["nalajalanaresh/virt-prerunner:latest"],
)

filegroup(
    name = "image.tar",
    srcs = [":image_load"],
    output_group = "tarball",
)
