load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cloud-hypervisor-client-gen_lib",
    srcs = ["main.go"],
    embedsrcs = ["client.go.mustache"],
    importpath = "github.com/nalajala4naresh/ch-vmm/cmd/cloud-hypervisor-client-gen",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_hoisie_mustache//:mustache",
        "@com_github_iancoleman_strcase//:strcase",
        "@com_github_nasa9084_go_openapi//:go-openapi",
    ],
)

go_binary(
    name = "cloud-hypervisor-client-gen",
    embed = [":cloud-hypervisor-client-gen_lib"],
    visibility = ["//visibility:public"],
)
