load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli_lib",
    srcs = [
        "opts.go",
        "vmm.go",
    ],
    importpath = "github.com/nalajala4naresh/ch-vmm/pkg/cli",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "//pkg/daemon/proto",
        "//pkg/grpcutil",
        "@com_github_spf13_cobra//:cobra",
    ],
)

go_binary(
    name = "cli",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)
