load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cloudutils",
    srcs = [
        "gcs.go",
        "s3.go",
    ],
    importpath = "github.com/nalajala4naresh/ch-vmm/pkg/cloudutils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_feature_s3_manager//:manager",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_google_cloud_go_storage//:storage",
    ],
)
