load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/nalajala4naresh/ch-vmm/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/grpcutil",
        "@com_github_spf13_viper//:viper",
    ],
)
