load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "daemon",
    srcs = [
        "server.go",
        "snapshot_controller.go",
        "vm_controller.go",
    ],
    importpath = "github.com/nalajala4naresh/ch-vmm/pkg/daemon",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1beta1",
        "//pkg/cloudhypervisor",
        "//pkg/cloudutils",
        "//pkg/daemon/cgroup",
        "//pkg/daemon/pid",
        "//pkg/daemon/proto",
        "//pkg/firecracker",
        "//pkg/tlsutil",
        "//pkg/volumeutil",
        "@com_github_firecracker_microvm_firecracker_go_sdk//:firecracker-go-sdk",
        "@com_github_firecracker_microvm_firecracker_go_sdk//client/models",
        "@com_github_moby_sys_mountinfo//:mountinfo",
        "@com_github_opencontainers_runc//libcontainer/configs",
        "@com_github_opencontainers_runc//libcontainer/devices",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_apimachinery//pkg/util/wait",
        "@io_k8s_client_go//tools/record",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_x_sys//unix",
    ],
)
