load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "volumeutil",
    srcs = [
        "volumeutil.go",
        "zstdpool.go",
    ],
    importpath = "github.com/nalajala4naresh/ch-vmm/pkg/volumeutil",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1beta1",
        "@com_github_klauspost_compress//zstd",
        "@com_github_kubernetes_csi_external_snapshotter_client_v8//apis/volumesnapshot/v1:volumesnapshot",
        "@com_github_mostynb_zstdpool_syncpool//:zstdpool-syncpool",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_kubevirt_containerized_data_importer_api//pkg/apis/core/v1beta1",
    ],
)
