load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "deviceplugin",
    srcs = ["deviceplugin.go"],
    importpath = "github.com/nalajala4naresh/ch-vmm/pkg/daemon/deviceplugin",
    visibility = ["//visibility:public"],
    deps = [
        "@in_gopkg_fsnotify_v1//:fsnotify_v1",
        "@io_k8s_kubelet//pkg/apis/deviceplugin/v1beta1",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
    ],
)
