load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "alert",
    srcs = ["alert.go"],
    importpath = "github.com/nalajala4naresh/ch-vmm/pkg/util/alert",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/metrics",
        "@com_github_prometheus_client_golang//prometheus",
    ],
)
